# YOLOv6

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Merge_DOTA.sh  README-ori.md  README-todo.md  README.md  README_cn.md  Train_custom_data.md  YOLOv6-obb-实现.md  asaf_evaluation.py  asaf_inference.py  asaf_yolov6_detector_class.py  eval_HRSC.sh  eval_drone.sh  export_onnx.py  hubconf.py  onnx_nms_ort.ipynb  requirements.txt  setup.py  source_v100_env  streamlit.py  tags  test.py  train_DOSR.sh  train_drone_vehicle.sh  train_hrsc.sh  turtorial.ipynb  tutorial.ipynb  xml_2_yolo.py
.dvc/: config
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.md  feature_request.yml  question.yml
configs/: yolov6_lite_l_finetune.py  yolov6_lite_m_finetune.py  yolov6_lite_s_finetune.py  yolov6_tiny.py  yolov6_tiny_finetune.py  yolov6l.py  yolov6l6.py  yolov6l6_finetune.py  yolov6l_finetune-obb-drone.py  yolov6l_finetune.py  yolov6l_relu.py  yolov6l_relu_finetune.py  yolov6l_seg.py  yolov6l_seg_finetune.py  yolov6m.py  yolov6m6.py  yolov6m6_finetune.py  yolov6m_finetune-obb-drone.py  yolov6m_finetune-obb.py  yolov6m_finetune.py  yolov6m_seg.py  yolov6m_seg_finetune.py  yolov6n.py  yolov6n6.py  yolov6n6_finetune.py  yolov6n_finetune-obb.py  yolov6n_finetune.py  yolov6n_seg.py  yolov6n_seg_finetune.py  yolov6s-obb.py  yolov6s.py  yolov6s6.py  yolov6s6_finetune.py  yolov6s_finetune-obb-drone.py  yolov6s_finetune-obb.py  yolov6s_finetune.py  yolov6s_opt.py  yolov6s_seg.py  yolov6s_seg_finetune.py  yolov6t.py  (+3 more)
configs/base/: README.md  README_cn.md  yolov6l_base.py  yolov6l_base_finetune.py  yolov6m_base.py  yolov6m_base_finetune.py  yolov6n_base.py  yolov6n_base_finetune.py  yolov6s_base.py  yolov6s_base_finetune.py
configs/exp/: yolov6m_solo.py  yolov6s_solo.py  yolov6x_solo.py
configs/experiment/: eval_640_repro.py  yolov6l_relu.py  yolov6n_with_eval_params.py  yolov6s_csp_scaled.py  yolov6t_csp_scaled.py
configs/mbla/: README.md  README_cn.md  yolov6l_mbla.py  yolov6l_mbla_finetune.py  yolov6m_mbla.py  yolov6m_mbla_finetune.py  yolov6s_mbla.py  yolov6s_mbla_finetune.py  yolov6x_mbla.py  yolov6x_mbla_finetune.py
configs/obb/: yolov6l_finetune-obb.py  yolov6m_finetune-obb-drone.py  yolov6s-obb.py  (+4 more)
configs/obb-shell/: Merge_DOTA.sh  eval_HRSC.sh  eval_dior.sh  eval_dota.sh  eval_drone.sh  train_DIOR.sh  train_DOSR.sh  train_DOTA.sh  train_DOTA_ddp.sh  train_drone_vehicle.sh  train_drone_vehicle_decouple.sh  train_drone_vehicle_distillation.sh  train_hrsc.sh  train_hsrc_distill.sh
data/: DIOR.yaml  DOSR.yaml  DOTA-ms.yaml  DOTA-ss.yaml  DOTA.yaml  DOTA_ss_new.yaml  HRSC2016.yaml  WIDER_FACE.yaml  coco.yaml  coco_job.yaml  dataset.yaml  drone_vehicle.yaml  voc.yaml
deploy/: export_onnx.py  export_openvino.py
deploy/NCNN/: CMakeLists.txt  README.md  export_torchscript.py  infer-lite-model.py  infer-ncnn-model.py  main.cpp
deploy/NCNN/Android/: README.md  build.gradle  local.properties
deploy/NCNN/Android/app/: build.gradle
deploy/NCNN/Android/app/src/main/: AndroidManifest.xml
deploy/NCNN/Android/app/src/main/assets/: yolov6-lite-l0.param  yolov6-lite-m.param  yolov6-lite-s.param
deploy/NCNN/Android/app/src/main/java/com/tencent/yolov6ncnn/: MainActivity.java  Yolov6Ncnn.java
deploy/NCNN/Android/app/src/main/jni/: CMakeLists.txt  ndkcamera.cpp  yolo.cpp  yolo.h  yolov6ncnn.cpp
deploy/NCNN/Android/app/src/main/res/layout/: main.xml
deploy/NCNN/Android/app/src/main/res/values/: strings.xml
deploy/NCNN/model/: .gitignore
deploy/NCNN/src/: handler.cpp  handler.h  utils.h  yolov6.h  yolov6.impl.cpp  yolov6.impl.h
deploy/ONNX/OpenCV/yolox/: CMakeLists.txt  yolox.cpp
docs/: About_naming_yolov6.md  About_training_size.md  About_training_size_cn.md  Convert_model.md  README.md  Test_NCNN_speed.md  Test_speed.md  Train_coco_data.md  Train_custom_data.md  Tutorial of Quantization.md  tutorial_repopt.md  tutorial_voc.ipynb
examples/: README.md  export.sh  ort_infer.py  trt_infer.py
tools/: eval.py  eval_R.py  export_onnx.py  infer.py  infer_R.py  train.py  train_R.py
widerface_evaluate/: box_overlaps.c  evaluation.py
yolov6/: .gitignore  weights.dvc
(+270 files in other folders)
